// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner /> should match snapshot 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  margin-top: 8px;
  margin-bottom: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #E0DFFF;
  padding: 8px 16px;
  border-radius: 8px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      display="flex"
    >
      <p
        class="c2"
      >
        Feedback message.
      </p>
    </div>
  </div>
</div>
`;

exports[`<Banner /> should match snapshot with button 1`] = `
.c3 {
  box-sizing: border-box;
  text-align: center;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: 32px;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #231B22;
  border: none;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 500;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 svg {
  width: 16px;
  height: 16px;
  fill: #FFFFFF;
  margin-right: 8px;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c3:not([disabled]):hover,
.c3:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c3:active {
  background-color: rgba(35,27,34,0.75);
  color: #FFFFFF;
}

.c3:active svg {
  fill: #FFFFFF;
}

.c4 {
  background-color: transparent;
  border-color: transparent;
  color: #231B22;
}

.c4 svg {
  fill: #231B22;
}

.c4:not([disabled]):hover,
.c4:not([disabled]):focus,
.c4:not([disabled]):active {
  background-color: transparent;
  box-shadow: none;
}

.c4:not([disabled]):hover {
  color: rgba(35,27,34,0.5);
}

.c4:not([disabled]):hover svg {
  fill: rgba(35,27,34,0.5);
}

.c4:not([disabled]):focus,
.c4:not([disabled]):active {
  color: rgba(35,27,34,0.75);
}

.c4:not([disabled]):focus svg,
.c4:not([disabled]):active svg {
  fill: rgba(35,27,34,0.75);
}

.c4:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #D7D7E0;
}

.c4:disabled svg {
  fill: #D7D7E0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  margin-left: 8px;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  margin-top: 8px;
  margin-bottom: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #E0DFFF;
  padding: 8px 16px;
  border-radius: 8px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      display="flex"
    >
      <p
        class="c2"
      >
        Banner with button
      </p>
      <button
        class="c3 c4 c5"
      >
        Action
      </button>
    </div>
  </div>
</div>
`;

exports[`<Banner /> should match snapshot with custom variant 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  margin-top: 8px;
  margin-bottom: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #E0DFFF;
  padding: 8px 16px;
  border-radius: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #C1EEDB;
  padding: 8px 16px;
  border-radius: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FCD6C3;
  padding: 8px 16px;
  border-radius: 8px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      display="flex"
    >
      <p
        class="c2"
      >
        Success banner without button
      </p>
    </div>
  </div>
  <div
    class="c3"
  >
    <div
      class="c1"
      display="flex"
    >
      <p
        class="c2"
      >
        Informative banner without button
      </p>
    </div>
  </div>
  <div
    class="c4"
  >
    <div
      class="c1"
      display="flex"
    >
      <p
        class="c2"
      >
        Attention banner without button
      </p>
    </div>
  </div>
</div>
`;

exports[`<Banner /> should match snapshot with icon 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  margin-right: 8px;
  width: 20px;
  height: 20px;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  margin-top: 8px;
  margin-bottom: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #E0DFFF;
  padding: 8px 16px;
  border-radius: 8px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      display="flex"
    >
      <svg
        class="c2"
        fill="#231B22"
        height="20"
        marginRight="xxsmall"
        width="20"
      />
      <p
        class="c3"
      >
        Banner with icon
      </p>
    </div>
  </div>
</div>
`;

exports[`<Banner /> should match snapshot with two action buttons 1`] = `
.c4 {
  box-sizing: border-box;
  text-align: center;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: 32px;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #231B22;
  border: none;
  border-radius: 9999px;
  color: #FFFFFF;
  font-size: 14px;
  font-weight: 500;
  font-family: Rubik;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 svg {
  width: 16px;
  height: 16px;
  fill: #FFFFFF;
  margin-right: 8px;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c4:not([disabled]):hover,
.c4:not([disabled]):focus {
  box-shadow: 0 4px 8px rgba(35,27,34,0.45);
}

.c4:active {
  background-color: rgba(35,27,34,0.75);
  color: #FFFFFF;
}

.c4:active svg {
  fill: #FFFFFF;
}

.c5 {
  background-color: transparent;
  border-color: transparent;
  color: #231B22;
}

.c5 svg {
  fill: #231B22;
}

.c5:not([disabled]):hover,
.c5:not([disabled]):focus,
.c5:not([disabled]):active {
  background-color: transparent;
  box-shadow: none;
}

.c5:not([disabled]):hover {
  color: rgba(35,27,34,0.5);
}

.c5:not([disabled]):hover svg {
  fill: rgba(35,27,34,0.5);
}

.c5:not([disabled]):focus,
.c5:not([disabled]):active {
  color: rgba(35,27,34,0.75);
}

.c5:not([disabled]):focus svg,
.c5:not([disabled]):active svg {
  fill: rgba(35,27,34,0.75);
}

.c5:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #D7D7E0;
}

.c5:disabled svg {
  fill: #D7D7E0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  margin-bottom: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  margin-right: 4px;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  margin-top: 8px;
  margin-bottom: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #E0DFFF;
  padding: 8px 16px;
  border-radius: 8px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      display="flex"
    >
      <p
        class="c2"
      >
        Banner with two action buttons
      </p>
    </div>
    <div
      class="c3"
      display="flex"
    >
      <button
        class="c4 c5 c6"
      >
        Primary Action
      </button>
      <button
        class="c4 c5 "
      >
        Secondary Action
      </button>
    </div>
  </div>
</div>
`;
